<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity5"
    android:background="#A9A9A9"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:background="#A9A9A9"
        tools:context="com.ariz.ador.project115v2.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:src="@drawable/insertdet"
            />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#111"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name:"></TextView>

                <EditText
                    android:id="@+id/etFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <requestFocus></requestFocus>
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#111"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Number: "></TextView>

                <EditText
                    android:id="@+id/etContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"></EditText>
            </TableRow>


            <TextView
                android:textColor="#111"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Store Pick Up:"></TextView>

            <RadioGroup
                android:id="@+id/RGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dapitan"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:gravity=""
                    android:padding="10dp"
                    android:text="@string/dapitan"
                    android:textColor="#154"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/noval"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/noval"
                    android:textColor="#154"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/espana"
                    android:layout_width="308dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/espana"
                    android:textColor="#154"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#111"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Time of Pick Up: "></TextView>

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"></EditText>
            </TableRow>

            <TextView
                android:id="@+id/textView5"
                android:textColor="#111"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mode of Payment:"></TextView>

            <RadioButton
                android:id="@+id/debit"
                android:gravity=""
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/debit"
                android:textColor="#154"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/credit"
                android:padding="10dp"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/credit"
                android:textColor="#154"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/cash"
                android:padding="10dp"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/cash"
                android:textColor="#154"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Done">
        </Button>

    </LinearLayout>
</ScrollView>